jk, now the scroll issue is fixed on mobile

--- a/app/styles/theme/_shale-base.scss
+++ b/app/styles/theme/_shale-base.scss
@@ -9,6 +9,7 @@ $bp-landing-medium: new-breakpoint(min-width 600px max-width 999px);
 $bp-landing-small: new-breakpoint(min-width 400px max-width 599px);
 $bp-landing-tiny: new-breakpoint(min-width 399px);
 // Short-Hed
+html,
 body {
   overflow-x: hidden;
   width: 100%;
